logs/validate.20260407-234538.log
Mode: isolate
Isolate: including Chap06 Chap05 Chap02
error: unexpected token, expected `;`
   --> src/Chap06/LabDirGraphMtEph.rs:566:68
    |
566 | ...                   Set::empty().insert(from@).contains(u) by {
    |                                                              ^^

error[E0425]: cannot find type `LabDirGraphMtEph` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:963:62
    |
963 |     impl<V: StTInMtT + Hash, L: StTInMtT + Hash> Display for LabDirGraphMtEph<V, L> {
    |                                                              ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEph` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:969:60
    |
969 |     impl<V: StTInMtT + Hash, L: StTInMtT + Hash> Debug for LabDirGraphMtEph<V, L> {
    |                                                            ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphIter` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:979:54
    |
979 |     impl<'a, V: StTInMtT + Hash + 'static> Debug for LabDirGraphMtEphIter<'a, V> {
    |                                                      ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphIter` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:983:56
    |
983 |     impl<'a, V: StTInMtT + Hash + 'static> Display for LabDirGraphMtEphIter<'a, V> {
    |                                                        ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphGhostIterator` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:987:54
    |
987 |     impl<'a, V: StTInMtT + Hash + 'static> Debug for LabDirGraphMtEphGhostIterator<'a, V> {
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphGhostIterator` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:991:56
    |
991 |     impl<'a, V: StTInMtT + Hash + 'static> Display for LabDirGraphMtEphGhostIterator<'a, V> {
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphInv` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:997:20
    |
997 |     impl Debug for LabDirGraphMtEphInv {
    |                    ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphInv` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1001:22
     |
1001 |     impl Display for LabDirGraphMtEphInv {
     |                      ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LockedLabDirGraphMtEph` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1007:80
     |
1007 |     impl<V: StTInMtT + Hash + 'static, L: StTInMtT + Hash + 'static> Debug for LockedLabDirGraphMtEph<V, L> {
     |                                                                                ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LockedLabDirGraphMtEph` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1011:82
     |
1011 |     impl<V: StTInMtT + Hash + 'static, L: StTInMtT + Hash + 'static> Display for LockedLabDirGraphMtEph<V, L> {
     |                                                                                  ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 3205MB, peak z3 RSS: 454MB, min free: 22028MB
Sampled CPU Usage: rust_verify: 39s, z3 children: 16s
